History
=======

Version 0.8.14 - Unreleased
---------------------------


Version 0.8.13 - 2009-10-19
---------------------------

- The attribute 'subscribeable' now defaults to False on newly created
  channels. This means newly created channels will not show up on my-subscriptions
  before they are made subscribeable from the channels configuration page.
  [tmog]

- Disabled stoneagehtml style attributes blacklist since it stripped
  out font-familiy from the styles added to a channel which confused 
  several users. This fixes http://tinyurl.com/ygmhv7a
  Unfortunately its not possible to specify a custom 
  black list like stoneagehtml.compactify(html, filter_tags=['position'...])
  since the stoneagehtml dosen't support that yet - http://tinyurl.com/ykwca4p.
  [pelle]

- Fixed bug that caused the "Include collector items" option to
  be ignored (i.e. always on) in "Send as newsletter" previews.
  Also, there is now a default cue for the dummy preview subscriber.
  The cue is always "one week ago".
  [tmog]

Version 0.8.12 - 2009-09-15
---------------------------

- Changed the email address validation. The old one allowed a few bad
  addresses to slip through - addresses with trailing dots for instance.
  The new validation is generally stricter. Note that 'simple' local addresses
  like 'admin@localhost' are no longer allowed. For special use-cases where you
  need this, you must change the validation RegExp. However, for most usecases, I
  believe this is a big improvement.
  [tmog]


Version 0.8.11 - 2009-09-03
---------------------------

- Added alternative "My subscriptions" page. It's based on a single form
  with subforms, instead of multiple forms like the old one. It's main
  feature is that it displays the ISubscriptionKey (the email address ;-))
  and "subscribe" button only once. It has a checkbox for subscribing to
  each channel.
  To try the new version, select it from the new "Global settings" controlpanel.
  [tmog]
